# RepoMan

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AgentDebate.jsx  ConsensusGauge.jsx  DiffViewer.jsx  HealthRadar.jsx  PipelineView.jsx  RepoInput.jsx  ResultsDashboard.jsx
frontend/src/hooks/: useWebSocket.js
repoman/: __init__.py  __main__.py  config.py  constants.py
repoman.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
repoman/agents/: architect.py  auditor.py  base.py  builder.py  orchestrator_agent.py
repoman/agents/prompts/: architect_system.md  auditor_system.md  builder_system.md  orchestrator_system.md
repoman/analysis/: completeness.py  complexity.py  dependency.py  direction.py  duplicates.py  health.py  ingestion.py  language.py  recommendations.py  staleness.py  structure.py
repoman/api/: app.py  schemas.py
repoman/api/routes/: analyze.py  dashboard.py  jobs.py  repos.py  search.py  ws.py
repoman/consensus/: engine.py  protocol.py  transcript.py  voting.py
repoman/core/: events.py  orchestrator.py  pipeline.py  state.py
repoman/elasticsearch/: __init__.py  client.py  constants.py  errors.py  index_management.py  indexer.py  ingestion.py  queries.py
repoman/elasticsearch/mappings/: analysis.json  issues.json  repositories.json
repoman/embeddings/: __init__.py  encoder.py
repoman/execution/: build_runner.py  file_ops.py  git_ops.py  sandbox.py  test_runner.py
repoman/generators/: cicd_gen.py  code_gen.py  doc_gen.py  test_gen.py
repoman/github/: __init__.py  fetcher.py  transformer.py
repoman/learning/: knowledge_base.py  pattern_extractor.py  strategy_optimizer.py
repoman/models/: anthropic_provider.py  base.py  openai_provider.py  router.py
repoman/utils/: async_helpers.py  diff.py  exceptions.py  logging.py
tests/: conftest.py
tests/fixtures/broken_python_repo/: broken_module.py
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_analysis.py  test_consensus.py  test_es_analysis.py  test_health.py
