[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoman-ai"
version = "0.1.0"
description = "Multi-model agentic system that transforms GitHub repositories into enterprise-grade projects"
readme = "README.md"
urls = { "Homepage" = "https://github.com/wildhash/RepoMan", "Repository" = "https://github.com/wildhash/RepoMan.git" }
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.25.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "chromadb>=0.5.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "jinja2>=3.1.4",
    "aiofiles>=23.2.1",
    "elasticsearch[async]>=8.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
repoman = "repoman.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repoman*"]

[tool.setuptools.package-data]
"repoman" = ["elasticsearch/mappings/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
